Update des fichiers cause d'erreur au niveau du repository

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile : Dockerfile
-    container_name: php
+    container_name: php_app
     depends_on:
       - mysql   
     volumes:
